--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,35 @@
 @import './common';
 @import './example';
+
+.breed-select {
+    font-size: 20px;
+    font-style: italic;
+    padding: 10px;
+    display: block;
+    margin: 10px auto;
+    border-radius: 10px;
+    background-color: aqua;
+}
+
+.is-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    width: 2000px;
+    height: auto;
+    background-color: rgb(180, 180, 180);
+}
+
